# dap-ui-sdk

./: .gitignore  .gitmodules  .travis.yml  BaseForm.cpp  BaseForm.h  BaseObject.cpp  BaseObject.h  CMakeLists.txt  DapButton.qml  DapButtonForm.ui.qml  DapChBase.cpp  DapChBase.h  DapChSockForw.cpp  DapChSockForw.h  DapChannelPacket.h  DapClientDefinitions.h  DapCmdAbstract.cpp  DapCmdAbstract.h  DapCmdClientAbstract.h  DapCmdParser.cpp  DapCmdParser.h  DapCmdServiceAbstract.h  DapComboBox.qml  DapComboBoxDelegate.qml  DapComboBoxForm.ui.qml  DapConnSession.cpp  DapConnSession.h  DapConnectBase.cpp  DapConnectBase.h  DapConnectClient.cpp  DapConnectClient.h  DapConnectStream.cpp  DapConnectStream.h  DapCrypt.cpp  DapCrypt.h  DapDataLocal.cpp  DapDataLocal.h  DapFont.qml  DapHttpPing.cpp  DapHttpPing.h  (+104 more)
core/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DapAndroidCompat.h  DapAndroidHelpers.h  DapBaseDataLocal.cpp  DapBaseDataLocal.h  DapBugReport.cpp  DapBugReport.h  DapBugReportData.cpp  DapBugReportData.h  DapBugReportHistory.cpp  DapBugReportHistory.h  DapCdbManager.cpp  DapCdbManager.h  DapConnectClient.cpp  DapConnectClient.h  DapCrypt.cpp  DapCrypt.h  DapDataConfig.cpp  DapDataConfig.h  DapDataLocal.cpp  DapDataLocal.h  DapDownload.cpp  DapDownload.h  DapGeoIP.cpp  DapGeoIP.h  DapHttpPing.cpp  DapHttpPing.h  DapIOSLogger.h  DapIOSLogger.mm  DapKeyAes.cpp  DapKeyAes.h  DapKeyCommon.cpp  DapKeyCommon.h  DapKeyMsrln.cpp  DapKeyMsrln.h  DapLocationInfo.cpp  DapLocationInfo.h  (+83 more)
core/test/: DapCryptTest.h  DapKeyIaesTest.h  DapKeyMsrlnTest.h  DapServerInfoTest.h  DapServersLocalStorageTest.h  TestHeaders.h  libdap-qt-test.pro  main.cpp
crypto/: CMakeLists.txt  README.md  libdap-qt-crypto.pri
crypto/include/: DapCert.h  DapCrypto.h  DapHash.h  DapKey.h  DapKeySign.h  DapPKey.h
crypto/src/: DapCert.cpp  DapCrypto.cpp  DapHash.cpp  DapKey.cpp  DapKeySign.cpp  DapPKey.cpp
fs/: CMakeLists.txt  DapFs.cpp  DapFs.h  libdap-fs.pri
stream/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DapChBase.cpp  DapChBase.h  DapChThread.h  DapChannelPacket.h  DapStreamer.cpp  DapStreamer.h  README.md  libdap-qt-stream.pri  libdap-qt-stream.pro
stream/test/: TestHeaders.h  libdap-qt-stream-test.pro  main.cpp
ui/: AccountScreen.ui  BugReportScreen.ui  CMakeLists.txt  ComboBoxPopup.ui  DapUIAnimationScreenAbstract.h  DapUiDialog.cpp  DapUiDialog.h  DapUiMainWindow.h  DapUiMenuBar.cpp  DapUiMenuBar.h  DapUiScreen.cpp  FAQScreen.ui  MainScreen.ui  MainScreenLayout.ui  NavigationPanel.ui  PasswordRecoveryScreen.ui  README.md  SheduleElement.h  SideBar.cpp  SideBar.h  SignInScreen.ui  SignInScreen.ui.autosave  SignUpScreen.ui  StartScreen.ui  Utils.cpp  dashboard_desktop.ui  dashboard_desktop_small.ui  dashboard_mobile_hor_big.ui  dashboard_mobile_ver_big.ui  dashboard_mobile_ver_small.ui  forgot_password_desktop.ui  forgot_password_desktop_big.ui  forgot_password_desktop_small.ui  libdap-qt-ui.pri  login_mobile_hor.ui  login_mobile_hor_big.ui  login_mobile_hor_small.ui  login_mobile_ver.ui  login_mobile_ver_big.ui  login_mobile_ver_small.ui  (+10 more)
ui/KelVPN/: KelVPN.pri  statisticscreen.cpp  statisticscreen.h  statisticscreen.ui
ui/auxiliary/: AppLanguageController.cpp  AppLanguageController.h  AppStyleSheetHandler.cpp  AppStyleSheetHandler.cpp.rm  AppStyleSheetHandler.h  DapDeveloperModeManager.cpp  DapDeveloperModeManager.h  LanguagesModel.cpp  LanguagesModel.h  LocaleModel.cpp  LocaleModel.h  ScreenInfo.cpp  ScreenInfo.h  TariffItem.cpp  TariffItem.h  UiScaling.cpp  UiScaling.h  Utilz.cpp  Utilz.h  auxiliary.pri  dap-developer-mode.pri  defines.h
ui/controls/: AdaptiveWidget.cpp  AdaptiveWidget.h  AnimatedLineEdit.cpp  AnimatedLineEdit.h  AnimationChangingWidget.cpp  AnimationChangingWidget.h  ClickableLabel.cpp  ClickableLabel.h  ClickableRunningLabel.cpp  ClickableRunningLabel.h  ComboBoxDelegate.cpp  ComboBoxDelegate.h  CustomButtonAbstract.cpp  CustomButtonAbstract.h  CustomButtonComboBox.cpp  CustomButtonComboBox.h  CustomComboBoxPopup.cpp  CustomComboBoxPopup.h  CustomLineEdit.cpp  CustomLineEdit.h  CustomLineEditBase.cpp  CustomLineEditBase.h  CustomLineHeightLabel.cpp  CustomLineHeightLabel.h  CustomMessageBox.cpp  CustomMessageBox.h  CustomMessageBox.ui  CustomPlacementButton.cpp  CustomPlacementButton.h  CustomPopup.cpp  CustomPopup.h  CustomPopupComboBox.cpp  CustomPopupComboBox.h  CustomTextEdit.cpp  CustomTextEdit.h  FAQWidget.cpp  FAQWidget.h  LabelToLink.cpp  LabelToLink.h  NewsFeedWidget.cpp  (+20 more)
ui/desktop/: MainScreen.ui  NavigationPanel.ui  SettingsScreen.ui  SignInScreen.ui  SignUpScreen.ui
ui/mobile/: MainScreen.ui  MainScreenMobile.ui  NavigationPanelBack.ui  NavigationPanelMain.ui  SettingsScreen.ui  SignInScreen.ui  SignInScreenMobile.ui  SignUpScreen.ui  StartScreen.ui
ui/screens/: AdaptiveScreen.cpp  AdaptiveScreen.h  DefaultMultiScreen.cpp  DefaultMultiScreen.h  MultiScreenAbstract.cpp  MultiScreenAbstract.h  MultiScreenWindow.cpp  MultiScreenWindow.h  screens.pri
vpn/: CMakeLists.txt
vpn/client/: CMakeLists.txt  DapAdaptiveKeepAlive.cpp  DapAdaptiveKeepAlive.h  DapChSockForw.cpp  DapChSockForw.h  DapCmdConnectionProblem.cpp  DapCmdConnectionProblem.h  DapDNSController.cpp  DapDNSController.h  DapIndicatorSession.h  DapIntelligentReconnector.cpp  DapIntelligentReconnector.h  DapNetworkQualityMonitor.cpp  DapNetworkQualityMonitor.h  DapServerSelector.cpp  DapServerSelector.h  DapSockForwPacket.h  DapStreamChChainVpnPacket.h  DapTunAbstract.cpp  DapTunAbstract.h  DapTunAndroid.cpp  DapTunAndroid.h  DapTunDarwin.cpp  DapTunDarwin.h  DapTunDarwin.mm  DapTunIOS.h  DapTunIOS.mm  DapTunMac.cpp  DapTunMac.h  DapTunNative.cpp  DapTunNative.h  DapTunUnixAbstract.cpp  DapTunUnixAbstract.h  DapTunWindows.cpp  DapTunWindows.h  DapTunWorkerAbstract.cpp  DapTunWorkerAbstract.h  DapTunWorkerAndroid.cpp  DapTunWorkerAndroid.h  DapTunWorkerDarwin.cpp  (+14 more)
vpn/common/: CMakeLists.txt  DapAlternativeServersContainer.cpp  DapAlternativeServersContainer.h  DapCmdAbstract.cpp  DapCmdAbstract.h  DapCmdClientAbstract.cpp  DapCmdClientAbstract.h  DapCmdParser.cpp  DapState.cpp  (+17 more)
(+1399 files in other folders)
